fix small icon alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -129,7 +129,6 @@ h1{
 
 .icon-small {
     font-size: 60px;
-    margin-bottom: 10px;
     letter-spacing: 5px;
     color: #4A148C;
     display:contents;
